--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.2",
+    "react-hook-form": "^7.53.1",
     "react-smooth": "^4.0.1",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.13.0"
