--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "@sanity/image-url": "^1.0.2",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
+    "next-sanity": "^9.8.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.2",
@@ -21,6 +23,7 @@
     "recharts": "^2.13.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
